# dark-factory-wealth-com-run

./: .gitignore  README.md  wealth_com_PRD_artifacts.md  wealth_com_PRD_transcript.md  youtube_wealth_videos.md
dark-factory-orchestrator/: SKILL.md
df-artifact-factory/: SKILL.md
df-context-memory/: SKILL.md
df-human-agent-handoff/: SKILL.md
df-intake-spec-lab/references/: atom-provenance-protocol.md
df-intake-spec-lab/scripts/: validate_prd_atoms.py
df-meta-attractor/: SKILL.md
df-meta-attractor/references/: anti-overfit-grep-protocol.md  skill-routing-map.md
df-quality-refinery/: SKILL.md
runs/transfer-test-mini/: README.md
runs/transfer-test-mini/app/apps/tax-mini/: pyproject.toml
runs/transfer-test-mini/app/apps/tax-mini/tax_mini/rules/: federal_income_tax_2026.py
runs/transfer-test-mini/app/apps/tax-mini/tests/: test_federal_income_tax.py
runs/transfer-test-mini/app/apps/tax-mini/tests/golden/: federal_income_tax_2026.json
runs/wealth-com/app/apps/ai-extract/: pyproject.toml
runs/wealth-com/app/apps/ai-extract/app/: main.py
runs/wealth-com/app/apps/ai-extract/app/extractors/: mock_grounded.py
runs/wealth-com/app/apps/ai-extract/app/validators/: grounding.py
runs/wealth-com/app/apps/ai-extract/tests/: test_grounding_validator.py
runs/wealth-com/app/apps/calc-engine/: Dockerfile  pyproject.toml
runs/wealth-com/app/apps/calc-engine/app/: main.py
runs/wealth-com/app/apps/calc-engine/app/rules/: federal_estate_tax_obbba.py  grat_remainder_7520.py  grat_vs_donothing_scenario.py
runs/wealth-com/app/apps/calc-engine/tests/: test_federal_estate_tax_obbba.py  test_grat_remainder.py
runs/wealth-com/app/apps/calc-engine/tests/golden/: grat_cases.json  obbba_baseline.json
(+113 files in other folders)
