[project]
name = "tax-mini"
version = "0.1.0"
description = "TaxBaseline Mini — single-user federal income tax baseline calc. Transfer-test workload for the dark-factory skill system."
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
